--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -9,8 +9,7 @@
                 <p><a class="btn btn-primary btn-lg">Learn more</a></p>
             </div>
         </div>
-
-    </div>
+    
     <div class="col col-lg-3">
         <div class="row">
             <p class="bs-component">
@@ -24,35 +23,19 @@
         </div>
         <div class="row">
             <div class="tab-pane panel-primary">
-		<div class="panel-heading">
+		        <div class="panel-heading">
                     <h3 class="panel-title">Log In</h3>
-
-        <div class="col col-lg-3">
-            <div class="row">
-                <div class="col">
-                    <p class="bs-component">
-	                    <%=link_to "Sign Up", new_profile_path, class: "btn btn-info btn-block" %>
-	                </p>
-
                 </div>
-	        </div>
-            <div class="row">
-                <div class="col">
-                    <div class="panel panel-primary">
-		                <div class="panel-heading">
-                            <h3 class="panel-title">Log In</h3>
-                        </div>
-                        <div class="panel-body">
-                             <%= render :file => '/app/views/sessions/new.html.erb' %> 
-                        </div>
-	                </div>
+                <div class="panel-body">
+                    <%= render :file => '/app/views/sessions/new.html.erb' %> 
                 </div>
-            </div>
+	       </div>
         </div>
+            
+    </div>
         
     </div>
 
-</div>
-
+<% end %>
 
 
