--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -41,8 +41,36 @@
     <div class="col-lg-6">
         <div class="list-group">
                 <a class="list-group-item active" href="#">Recommended Quizzees</a>
-                <a class="list-group-item" href="">Category1</a>
-                <a class="list-group-item" href="">Category2</a>
+                <a class="list-group-item" href="">
+                       
+                            <% maximum = @done.max 
+                                
+                                for i in 0..@done.count
+                                    if @done[i] == maximum
+                                        @index = i
+                                        break        
+                                    else    
+                                        i=i+1                                        
+                                    end 
+                                end                                            
+                            %> 
+                            <%= Category.find(@index+1).category_name%>                        
+                </a>
+                <a class="list-group-item" href="">
+                    <%      
+                            minimum = @done.min 
+                                
+                                for i in 0..@done.count
+                                    if @done[i] == minimum
+                                        @index_1 = i
+                                        break        
+                                    else    
+                                        i=i+1                                        
+                                    end 
+                                end                                            
+                            %> 
+                            <%= Category.find(@index_1+1).category_name%>
+                </a>
                 <a class="list-group-item" href="">Category3</a>
         </div>
     </div>
