--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -39,11 +39,22 @@
         </div>
     </div>
     <div class="col-lg-6">
-        <div class="list-group">
-                <a class="list-group-item active" href="#">Recommended Quizzees</a>
-                <a class="list-group-item" href="">Category1</a>
-                <a class="list-group-item" href="">Category2</a>
-                <a class="list-group-item" href="">Category3</a>
+        <div class="row">
+            <div class="col">
+                <div class="list-group">
+                    <a class="list-group-item active" href="#">Recommended Quizzees</a>
+                    <a class="list-group-item" href="">Category1</a>
+                    <a class="list-group-item" href="">Category2</a>
+                    <a class="list-group-item" href="">Category3</a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="list-group">
+                    <a class="list-group-item active" href="">Recent Quizzees</a>
+                    <a class="list-group-item" href="">Quiz1</a>
+                    <a class="list-group-item" href="">Quiz2</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -51,9 +62,5 @@
     <div class="col-lg-12">
             <%= render template: "quizzes/index" %>
     </div>
-
-
-
-
 </div>
     
