--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -17,22 +17,22 @@
             <div class="col-md-6">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        <p>Rank Stuff goes here</p>
+                        <p><%= ranking %></p>
                         <p>Panel class can be modified to change the look</p>
                     </div>
                     <div class="panel-footer">
-                        Rank :<%= ranking %>
+                        Rank 
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        <p>Points Stuff goes here</p>
+                        <p><%= returnPoint %></p>
                         <p>Panel class can be modified to change the look</p>
                     </div>
                     <div class="panel-footer">
-                        Points :<%= returnPoint %>                       
+                        Points                        
                     </div>
                 </div>
             </div>
