--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -23,27 +23,26 @@
         <div class="row">
             <div class="panel panel-default">
                 <a class="list-group-item active" href="#">Recommended Quizzees</a>
-                <a class="list-group-item" href="#">
-                       
-                            <% maximum = @done_new.max                                 
-                                for i in 0..@done_new.count
-                                    if @done_new[i] == maximum
-                                        @index = i
-                                        break        
-                                    else    
-                                        i=i+1                                        
-                                    end 
-                                end                                            
-                            %> 
+                    <% maximum = @done_new.max                                 
+                       for i in 0..@done_new.count
+                           if @done_new[i] == maximum
+                               @index = i
+                               break        
+                           else    
+                               i=i+1                                        
+                           end 
+                       end                                            
+                    %> 
                             
-                            <%= link_to "#{Category.find(@index+1).category_name}", newquiz_path(category: @index+1, level: 3) %>
-                            &nbsp;
-                            <span class="badge">
-                                <span class="glyphicon glyphicon-record"></span>
-                                     Recommended
+                <%= link_to newquiz_path(category: @index+1, level: 3) , :class => "list-group-item" %>
+                    <p>
+                        <%=  "#{Category.find(@index+1).category_name}" %>
+                        <span class="badge">
+                            <span class="glyphicon glyphicon-record">
+                            </span>
+                            Recommended
                         </span>                      
-                </a>
-                <a class="list-group-item" href="#">
+                    </p>
                     <%      
                             minimum = @done_new.min                                 
                                 for i in 0..@done_new.count
@@ -55,13 +54,15 @@
                                     end 
                                 end                                            
                             %> 
-                             <%= link_to "#{Category.find(@index_1+1).category_name}", newquiz_path(category: @index_1+1, level: 1) %>
-                    &nbsp;
+                <%= link_to newquiz_path(category: @index_1+1, level: 1) , :class => "list-group-item" %>
+                        <p>
+                            <%=  "#{Category.find(@index_1+1).category_name}" %> 
                             <span class="badge">
-                                <span class="glyphicon glyphicon-record"></span>
-                                     Recommended
-                        </span>        
-                </a>                
+                                <span class="glyphicon glyphicon-record">
+                                </span>
+                                Recommended
+                            </span>        
+                        </p>
             </div>
         </div>
         <div class="row">
