--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,6 +62,15 @@
 </header>
 <div class="container">
 <%= yield %>
+
+<div class="row">
+    <div class="col-md-12">
+        <% flash.each do |name, msg| -%>
+            <div class="alert alert-<%=name%>"> <%=msg%> </div>
+        <% end -%>
+    </div>
+</div>
+
 </div>
 <br>
 <br>
