--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div class="row">
-    <div class="col-md-7">
+    <div class="col-md-9">
         <%= form_for(@quiz, url: url_for(:action => 'answer')) do |f| %>
 
             <% if @quiz.errors.any? %>
@@ -28,11 +28,12 @@
                 <br/><br/>
                 &nbsp;
                 <% @answers.each do |ans| %>
-                    <%= f.button ans, {name: "answer", value: ans, class: "btn btn-primary"} %>
+                    <%= f.button ans, {name: "answer", value: ans, class: "btn btn-primary answer-btn"} %>
                 <% end %>
             </h3>
 
             <% if ! @last_answer.empty? %>
+                <br>
                 <div class="alert <%= (@last_answer.include? "Correct") ? "alert-success" : "alert-danger" %>"
                     role="alert">
                     <%= @last_answer %>
@@ -41,7 +42,7 @@
 
         <% end %>
     </div>
-    <div class="col-md-5">
+    <div class="col-md-3">
         <div>
             You are on Question <%=@current_question_num%> of 5
         </div>
